# quadcopter

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt  notes.n
.csettings/: 0.1544328630_cdtBuildSystem  0.1544328630_de.marw.cdt.cmake.core.settings  0.1544328630_org.eclipse.cdt.core.settings  cdt.managedbuild.toolchain.gnu.base.1454740932_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.1454740932_org.eclipse.cdt.core.settings  cdt.managedbuild.toolchain.gnu.base.49095745_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.49095745_de.marw.cdt.cmake.core.settings  cdt.managedbuild.toolchain.gnu.base.49095745_org.eclipse.cdt.core.settings  cdt.managedbuild.toolchain.gnu.base.657325351_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.657325351_org.eclipse.cdt.core.settings
Default/: makefile  sources.mk
src/: .GPSSensor.cpp.swp  .GPSSensor.h.swp  .cproject  .depend  .gitignore  .project  Agent.cpp  Agent.h  Base64.cpp  Base64.h  Blackboard.cpp  Blackboard.h  CMakeLists.txt  Communicator.cpp  Communicator.h  Constants.h  Controller.cpp  Controller.h  Device.h  GPSSensor.h  LSM9DS0.cpp  LSM9DS0.h  LSMTest.cpp  Log.cpp  Log.h  Main.cpp  Motor.cpp  Motor.h  MotorController.cpp  MotorController.h  OLED.cpp  OLED.h  Quadcopter.cpp  QuadcopterConfig.h  QuadcopterConfig.h.in  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  build.sh  (+9 more)
src/c_drivers/: CMakeLists.txt  Makefile  base64.c  cmake_install.cmake  comm_server.c  comm_server.h  gps_comm.c  gps_comm.h  main.c  oled.c  oled.h  pack.c  pack.h  parse  parse.c  parse.h  pwm.c  pwm.h
src/devices/: OLED.h
src/docs/: ##copter_frame.dxf  #copter_frame.dxf  copter_frame.dxf  voltage_regulator
src/python/: oled.py
src/quadview/: SocketIO.cpp
src/quadview/build-qtquadview-Desktop-Debug/: moc_quadview.cpp  qtquadview  ui_quadview.h
src/quadview/build-quadview-Desktop-Debug/: quadview
src/quadview/qtquadview/: main.cpp  qtquadview.pro  quadview.cpp  quadview.h  quadview.ui
src/quadview/quadview/: main.cpp  quadview.pro
src/quadview/quadview/qml/quadview/: main.qml
